--- a/index.html
+++ b/index.html
@@ -204,6 +204,8 @@ for (i = 0; i < acc.length; i++) {
 }
 </script>
   <br>
+  <h1>Chlorofluorocarbons (CFCs)</h1>
+  <p>Fluorinated gases are not created in nature. They damage the protective ozone layer and are powerful greenhouse gases.</p>
   <br>
   <br>
 
